# audiveris-api

./: .gitignore  Dockerfile  README.md  api.py  audiveris-entry.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
tests/: conftest.py  test_api.py
