[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audiveris-api"
version = "0.1.0"
description = "FastAPI wrapper for Audiveris OMR engine"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "httpx>=0.25.2",
    "pytest-asyncio>=0.23.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["."] 